css/core/dialogs.css
/* Container */
div.dialog.container {
  z-index: 99999;

  position: fixed;
  left: 0;
  top: 0;

  /* To cover area of scrollbar as well */
  width: 100vw;
  height: 100vh;

  display: flex;
  align-items: center;
  justify-content: center;

  scrollbar-color: rgba(0, 0, 0, .25) rgba(0, 0, 0, .1);
  scrollbar-width: thin;

  overflow-y: scroll !important;
  overscroll-behavior: contain;

  line-height: 1.3em;
}

/* Dialogs */
div.dialog.container > .dialog {
  width: 760px;

  padding: 1.25em;
  border-radius: 0.5em;

  background-color: white;

  display: flex;
  flex-direction: column;
  align-items: center;

  gap: 1.5em;
}

div.dialog.container > .tight.dialog {
  gap: 0;
  padding: 0;
}

div.dialog.container > .dialog > div {
  width: 100%;
}

div.dialog.container > .very.big.dialog {
  width: 1250px;
}

div.dialog.container > .medium.big.dialog {
  width: 1180px;
}

div.dialog.container > .big.dialog {
  width: 950px;
}

div.dialog.container > .small.dialog {
  width: 570px;
}

div.dialog.container > .very.small.dialog {
  width: 400px;
}

div.dialog.container > .inverted.dialog {
  background-color: #0b0c0c;
  color: white;
}

div.dialog.container > .basic.dialog {
  background-color: transparent;
}

div.dialog.container > .bordered.dialog {
  border: 1px solid #0b0c0c;
}

div.dialog.container > .inverted.bordered.dialog {
  border: 1px solid #262626;
}

/* Sections */
div.dialog.container > .dialog > .header {
  text-align: center;
  font-family: Lato;
  font-size: 1.71428571rem;
  line-height: 1.28571429em;
  font-weight: 700;
}

div.dialog.container > .dialog > .left.header {
  text-align: left;
}

div.dialog.container > .dialog > .separated.header {
  border-bottom: 1px solid rgba(34, 36, 38, .15);
}

div.dialog.container > .inverted.bordered.dialog > .header {
  border-bottom: 1px solid #262626;
  padding-bottom: 0.25em;
}

/* Loader */
div.dialog.container img.loader {
  width: 100px;

  opacity: 65%;
  animation: spin 1.2s linear infinite;

  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

div.dialog.container img.pulse-loader {
  animation: opacity-pulse 2s infinite;
}

/* Elements */
div.dialog.container > .dialog > ul {
  margin-top: 0;
}

/* Keyframes */
@keyframes spin {
  100% {
      transform: rotate(360deg);
  }
}

@keyframes opacity-pulse {
  0% {
      opacity: 100%;
  }
  50% {
      opacity: 0%;
  }
  100% {
      opacity: 100%
  }
}

